# ortcxx

./: .gitignore  CMakeLists.txt  environment.yml  install_deps.py
cxx/core/: model.cpp
cxx/include/: core.h
examples/: CMakeLists.txt  managerServiceTest.cpp  modelTest.cpp
include/cinnamon/: core.h
src/: ORTManager.cpp  ORTManager.h  ORTSession.cpp  ORTSession.h  ORTSessionInterface.h
src/headers/: manager.h  model.h
src/modules/model/: manager.cpp  model.cpp
tests/: testManager.cpp  testModel.cpp  testService.cpp
